# sickassembler

./: .gitignore  .travis.yml  Cargo.toml  README.md  instruction-set.txt  rusty-tags.vi
src/: instruction.rs  main.rs  table_entry.rs
src/basic_types/: flags.rs  instruction.rs  mod.rs  operands.rs  register.rs  symbol_table.rs  table_entry.rs
src/lib/: filehandler.rs  lib.rs  operand_parsing.rs  semantics_validator.rs
src/lib/basic_types/: base_table.rs  flags.rs  formats.rs  instruction.rs  instruction_set.rs  literal.rs  literal_table.rs  mod.rs  operands.rs  register.rs  symbol.rs  symbol_tables.rs  unit_or_pair.rs
src/lib/basic_types/tests/: instruction_set_tests.rs  instruction_test.rs  instruction_tests.rs  mod.rs
src/lib/htme/: mod.rs  raw_program.rs  record_string.rs  tests.rs
src/lib/htme/tests/: formatting_tests.rs  mod.rs  raw_program_tests.rs  record_from_program_tests.rs
src/lib/pass_one/: mod.rs  pass_one.rs
src/lib/pass_two/: mod.rs  object_code_generator.rs  operand_translator.rs  tests.rs  translator.rs
src/pass_two/: mod.rs
src/tests/: Copy.txt  test1.asm  test2.asm  tests.md
src/tests/more-tests/: PROG1_ERROR.asm  PROG2_BASE.asm  PROG2_BASE_ERROR.asm  PROG_FORMAT4.asm  csect-copy.asm  prog1.asm  sheet1-2.asm  sheet1-3.asm  sheet1-4.asm  sheet1.asm  sheet2_part1.asm  sheet3.asm
src/tests/more-tests/Project_2_sic_xe_programs/: equ_.asm
